--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript" src="script.js" defer></script>
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <title>Calculator</title>
 </head>
+
 <body>
-    <div id="calculator"></div>
+    <div id="calculator">
+        <div id="display" class="display">0</div>
+        <div id="clear" class="button control">AC</div> <!-- All Clear -->
+        <div id="sign" class="button control">+/-</div>
+        <div id="percentage" class="button control">%</div>
+        <div id="divide" class="button operation">➗</div>
+
+        <div id="seven" class="button number">7</div>
+        <div id="eight" class="button number">8</div>
+        <div id="nine" class="button number">9</div>
+        <div id="multiply" class="button operation">✖️</div>
+
+        <div id="four" class="button number">4</div>
+        <div id="five" class="button number">5</div>
+        <div id="six" class="button number">6</div>
+        <div id="subtract" class="button operation">➖</div>
+
+        <div id="one" class="button number">1</div>
+        <div id="two" class="button number">2</div>
+        <div id="three" class="button number">3</div>
+        <div id="add" class="button operation">➕</div>
+
+        <div id="zero" class="button number">0</div>
+        <div id="decimal" class="button number">.</div>
+        <div id="equal" class="button operation">🟰</div>
+    </div>
 </body>
+
 </html>
