--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 
 <body>
     <div id="calculator">
-        <div id="display" class="display">0</div>
+        <div id="display" class="display">init</div>
         <div id="clear" class="button control">AC</div> <!-- All Clear -->
         <div id="sign" class="button control">+/-</div>
         <div id="percentage" class="button control">%</div>
-        <div id="divide" class="button operation">➗</div>
+        <div id="divide" class="button operation">/</div>
 
         <div id="seven" class="button number">7</div>
         <div id="eight" class="button number">8</div>
         <div id="nine" class="button number">9</div>
-        <div id="multiply" class="button operation">✖️</div>
+        <div id="multiply" class="button operation">x</div>
 
         <div id="four" class="button number">4</div>
         <div id="five" class="button number">5</div>
         <div id="six" class="button number">6</div>
-        <div id="subtract" class="button operation">➖</div>
+        <div id="subtract" class="button operation">-</div>
 
         <div id="one" class="button number">1</div>
         <div id="two" class="button number">2</div>
         <div id="three" class="button number">3</div>
-        <div id="add" class="button operation">➕</div>
+        <div id="add" class="button operation">+</div>
 
         <div id="zero" class="button number">0</div>
         <div id="decimal" class="button number">.</div>
-        <div id="equal" class="button operation">🟰</div>
+        <div id="equal" class="button operation">=</div>
     </div>
 </body>
 
