--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <div id="calculator">
-        <div id="display" class="display">init</div>
+        <div id="display" class="display"></div>
         <div id="clear" class="button control">AC</div> <!-- All Clear -->
-        <div id="sign" class="button control">+/-</div>
-        <div id="percentage" class="button control">%</div>
+        <div id="sign" class="button control transformation">+/-</div>
+        <div id="percentage" class="button control transformation">%</div>
         <div id="divide" class="button operation">/</div>
 
         <div id="seven" class="button number">7</div>
         <div id="eight" class="button number">8</div>
         <div id="nine" class="button number">9</div>
-        <div id="multiply" class="button operation">x</div>
+        <div id="multiply" class="button operation">*</div>
 
         <div id="four" class="button number">4</div>
         <div id="five" class="button number">5</div>
