make display double line

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <div id="calculator">
-        <div id="display" class="display"></div>
+        <div id="display" class="display">
+            <div id="expression"></div>
+            <div id="result"></div>
+        </div>
         <div id="clear" class="button control">AC</div> <!-- All Clear -->
         <div id="sign" class="button control transformation">+/-</div>
         <div id="percentage" class="button control transformation">%</div>
