styles a bit; add user notes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <div id="calculator-with-instructions">
+    <div id="notes">
+        <h3>User Notes</h3>
+        <ul class="instruction-list">
+            <li>Each operand must be less than 10 digits. Strangely, in this world, decimal point <strong>.</strong> and negative sign <strong>-</strong> count as digits too.</li>
+            <li>Everything else is basically the same 👏</li>
+            <li>But stay clear of large numbers. They are evil. 😈</li>
+        </ul>
+    </div>
     <div id="calculator">
         <div id="display" class="display">
             <div id="expression"></div>
@@ -38,6 +47,7 @@
         <div id="decimal" class="button number">.</div>
         <div id="equal" class="button operation">=</div>
     </div>
+</div>
 </body>
 
 </html>
